--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="row bg-primary mt-2 pl-5" style="background-image: linear-gradient(to bottom right, #8C1D40, #8C1D40, purple);margin-left: -5rem !important">
+<div class="row bg-primary mt-2 pl-5" style="background-color: #8C1D40; margin-left: -5rem !important">
 
   <div class="col-lg-5 pt-3 pb-4 pl-5 ml-3">
   <% flash.each do |key, value| %>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="tabContainer text-center" style="background-color: #8C1D40; padding-right: 0.2rem; padding-left: 0.2rem; padding-bottom: 0.2rem" >
-        <div class="buttonContainer pl-3 pr-3" >
+        <div class="buttonContainer pl-3 pr-3" style="height: 110px">
           <button onclick="showPanel(0,'#4caf50')" style="float: left; width: 20%; height:65px; min-width: 60px">List View</button>
           <button onclick="showPanel(1,'#4caf50')" style="float: left; width: 20%; height:65px; min-width: 60px">Daily View</button>
           <button onclick="showPanel(2,'#4caf50')" style="float: left; width: 20%; height:65px; min-width: 95px">Monthly View</button>
