--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <a class="nav-link text-white" id="navLink" href="/jointheteam"><strong>Join the Team</strong></a>
       </li>
       <li class="nav-item" style="margin-right: 30px">
-        <a class="nav-link text-white" id="navLink" href="/studyhall"><strong>Schedule Drop-In</strong></a>
+        <a class="nav-link text-white" id="navLink" href="/studyhall"><strong>Drop-In Anytime</strong></a>
       </li>
     </ul>
 
