--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="row mt-2" id = "heroImage">
   <!-- https://unsplash.com/photos/IL4WL6bf-h4
        https://unsplash.com/photos/RIt88XBR3G0
-       https://unsplash.com/photos/rrI02QQ9GSQ 
-       https://unsplash.com/photos/SJvDxw0azqw 
-  -->  
+       https://unsplash.com/photos/rrI02QQ9GSQ
+       https://unsplash.com/photos/SJvDxw0azqw
+  -->
 
   <div class="col-lg-5 pt-3 pb-4 pl-1 ml-3">
     <% flash.each do |key, value| %>
@@ -28,57 +28,64 @@
   </div>
 </div>
 
+<div class="mt-2 pb-1" style="padding-top: 0px !important; text-align: center">
+  <h1 class="text-center pt-3"><strong>
+    Discover, Learn, & Converse </strong>
+  </h1>
+  <hr class="title-divider" style="width: 45%; border-width: 3.5px; border-color: #FFC627;">
+</div>
+
 <div class="row" style="margin-bottom: 30px">
     <!--study hall and conversation section -->
 
     <div class="col-lg-6 col-md-12 col-sm-12 pt-2" style="padding-top: 1rem !important">
       <!--conversations column-->
+      <%= image_tag("convo_photo.png", class:"mx-auto d-block pb-3", style: "border-radius: 112px; width: 50%;")%>
+      <h2 class="text-center"><strong>Conversations</strong>
+      </h2>
+      <hr class="black-divider" style="width: 35%; border-width: 3.5px; border-color: black;">
+      <p class = "text-center">Join video chats where experienced women who are hiring empower the next generation of STEM professionals. <br>Ask for advice and find out how to get your first tech job!
+      </p>
       <div class="col-lg-12 col-md-12 mx-auto d-block text-center" style = "min-height:42%; justify-content:flex-end">
         <%= render 'layouts/countdown_clock' %>
       </div>
-      <h2 class="text-warning text-center"><strong>Conversations</strong>
-      </h2>
-      <p class = "text-center">Join video chats where experienced women who are hiring empower the next generation of STEM professionals. <br>Ask for advice and find out how to get your first tech job!
-      </p>
-      <%= image_tag("convo_photo.png", class:"mx-auto d-block pb-3", style: "border-radius: 112px; width: 50%;")%>
     </div>
 
     <!--end of conversations column-->
 
     <div class="col-lg-6 col-md-12 col-sm-12 pb-5 pt-3 mt-3" style="margin-top: 0rem !important">
       <!--study hall column; col-md-6 col-lg-6 col-sm-12 col-xs-12-->
-      <div class="col-lg-12 col-md-12 col-sm-7 mx-auto d-block text-center" style = "min-height:42%; justify-content:flex-end">
-        <%= render 'layouts/countdown_clockstudy' %>
-      </div>
-      <h2 class="text-warning text-center pl-5"><strong>
+      <%= image_tag("activism_hall.jpg", class:" mx-auto d-block  pb-3", style: "border-radius:112px; width:50%;")%>
+      <h2 class="text-center"><strong>
         Drop-In Hours</strong>
       </h2>
+      <hr class="black-divider" style="width: 35%; border-width: 3.5px; border-color: black;">
       <p class = "text-center">
         Join a community of student developers and designers to network and get peer feedback. <br> Please drop in and interrupt us to find out what we're up to!
       </p>
-      <%= image_tag("activism_hall.jpg", class:" mx-auto d-block  pb-3", style: "border-radius:112px; width:50%;")%>
-
+      <div class="col-lg-12 col-md-12 col-sm-7 mx-auto d-block text-center" style = "min-height:42%; justify-content:flex-end">
+        <%= render 'layouts/countdown_clockstudy' %>
+      </div>
     </div>
 </div>
     <!--end of drop in column-->
 </div>
       <div>
-        <div class="convo-container text-center" style="background-color: #8C1D40">
+        <div class="convo-container text-center">
           <!-- col-lg-3 col-md-6 -->
-          <h1 class = "white">Conversations</h1>
-          <% if user_signed_in? %>
-            <%= link_to 'Host a Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise" %>
-          <% end %>
+          <h2 class = "text-center" style="font-size: 250%"><strong>Conversations<strong>
+          </h2>
+          <hr class="title-divider" style="width: 27%; border-width: 3.5px; border-color: #FFC627;">
         </div>
       </div>
 
-      <div class="tabContainer text-center" style="background-color: #8C1D40; padding-right: 0.2rem; padding-left: 0.2rem; padding-bottom: 0.2rem" >
-        <div class="buttonContainer pl-3 pr-3" style="height: 110px">
-          <button onclick="showPanel(0,'#4caf50')" style="float: left; width: 20%; height:65px; min-width: 60px">List View</button>
-          <button onclick="showPanel(1,'#4caf50')" style="float: left; width: 20%; height:65px; min-width: 60px">Daily View</button>
-          <button onclick="showPanel(2,'#4caf50')" style="float: left; width: 20%; height:65px; min-width: 95px">Monthly View</button>
+      <div class="tabContainer text-center" style="width: 95%; margin: auto; background-color: #8C1D40; border-radius: 4px; padding-right: 0.2rem; padding-left: 0.2rem; padding-bottom: 0.2rem; box-shadow: 0px 5px 5px grey;" >
+        <div class="buttonContainer pl-3 pr-3 pt-3" style="height: 100px;">
+          <button onclick="showPanel(0,'#4caf50')" class= "btn btn-primary-week" style="float: left; width: 20%; height:65px; min-width: 60px; border-color: #ffffff;">List View</button>
+          <button onclick="showPanel(1,'#4caf50')" class= "btn btn-primary-week" style="float: left; width: 20%; height:65px; min-width: 60px; border-color: #ffffff;">Daily View</button>
+          <button onclick="showPanel(2,'#4caf50')" class= "btn btn-primary-week" style="float: left; width: 20%; height:65px; min-width: 95px; border-color: #ffffff;">Monthly View</button>
           <% if user_signed_in? %>
-            <%= link_to 'Post Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise", style: "padding-top: 9px !important; width: 20%; height:65px; line-height: 250%; overflow: hidden" %>
+            <%= link_to 'Post Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise", style: "padding-top: 9px !important; float: right; width: 20%; height:65px; line-height: 250%; overflow: hidden" %>
           <% end %>
         </div>
 
