fixing the list and daily schedule in home, redesign of drop-in page

--- a/app/views/layouts/_countdown_clock.html.erb
+++ b/app/views/layouts/_countdown_clock.html.erb
@@ -9,7 +9,7 @@
         Hosted by: <%= link_to @host.name, @host.permalink %>
       </div>
     <% elsif Time.current < Time.parse(@start_time) %>
-      <div id="clockdiv" class ="justfy-items-end pt-5 pb-0">
+      <div id="clockdiv" class ="justify-items-end pt-4 pb-0">
         <div>
         <span class="days h1"></span>
         <div class=" h6 text-warning"><strong>Days</strong></div>
