--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -43,6 +43,13 @@ body {
   margin-right: 10px;
 }
 
+.img-live{
+  height: 30px;
+  width: 55px;
+  margin-right: 50px;
+  margin-top: 10px;
+}
+
 .navbar-default {
   background-color: $brand-primary;
 }
