--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,7 +20,7 @@
         <div class="col-sm-2">
           <p class="f-header text-left"><strong>CONTACT</strong></p>
           <a href="mailto:info@thinq.tv" alt="Email" target="_blank" class="f-link"><strong>info@ThinQ.tv</strong></a><br>
-          <a class="f-link">602-888-3089</a><br>
+          <a class="f-phone">602-888-3089</a><br>
 
         </div>
         <br class="visible-lg-block">
