--- a/app/views/static_pages/studyhall.html.erb
+++ b/app/views/static_pages/studyhall.html.erb
@@ -92,7 +92,7 @@
           </div>
             <div class="card-body mr-5 pr-5">
               <h4> <a class="btn btn-primary btn-lg btn-block text-center" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-            User Experience <br>
+            USER EXPERIENCE <br>
               </a></h4>
               <div class="collapse" id="collapseTwo">
                 <div>
@@ -113,7 +113,7 @@
           </div>
           <div class="card-body mr-5 pr-5">
             <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">
-             RUBY ON RAILS Web Development <br>
+             RUBY ON RAILS DEVELOPMENT<br>
               </a>
             </h4>
               <div class="collapse" id="collapseOne">
