--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -41,11 +41,11 @@
       <% @calendar_events.sort_by{|t| t.start_at}.each do |event| %>
           <% user = User.find(event.user_id) %>
           <div class = "col-xs-3" style="text-align: left; padding-left: 4%; width: 30%">
-            <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700; color: #222222; font-size: 150%", title: event.desc %><br>
-            <%= link_to user.name, user.permalink, style:"color:#6c757d; font-size: 100%" %>
+            <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700; color: #222222;", title: event.desc %><br>
+            <%= link_to user.name, user.permalink, style:"color:#6c757d" %>
             <% if user_signed_in? %>
               <% if event.user_id == current_user.id %>
-                <br><%= link_to '(Edit Conversation)', edit_event_path(event.id), style:"color:#6c757d; font-size: 100%" %>
+                <br><%= link_to '(Edit Conversation)', edit_event_path(event.id), style:"color:#6c757d" %>
               <% end %>
             <% end %>
           </div>
@@ -61,7 +61,7 @@
           <div class = "col-xs-3" style="color:#000; text-align: left; width: 20%">
             <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
             <br>
-            <span style="font-size:100%; color: #6c757d;" id=convocalendar-time<%=i%>></span>
+            <span style="font-size:90%; color: #6c757d;" id=convocalendar-time<%=i%>></span>
           </div>
           <script>
             var date = new Date(Date.parse("<%= event.start_at.strftime("%FT%T%:z") %>"));
@@ -125,7 +125,7 @@
                     <% end %>
                   <% else %>
                     <%= f.text_field :email, :style => "border: 1px solid grey; border-radius: 0px;", placeholder: "Enter email", :class =>"enter_email" %>
-                    <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:0px;", :id => "RSVPsubmit" %>
+                    <%= f.submit "RSVP", :style => "color: #8C1D40; background-color: white; border-color: #8C1D40; margin-top: 2px; padding: 2px 20px; font-weight: normal; border-radius:4px; border: 1px solid", :id => "RSVPsubmit" %>
                   <!-- disable until ssl working
                     <div align="center"><br><%= recaptcha_tags :style => "transform:scale(0.85);transform-origin:5 0" %></div>
                   -->
@@ -194,7 +194,7 @@
               <a href="https://twitter.com/intent/tweet?text=Join <%= user.name %>'s' Conversation to talk about: <%= event.name + "," %> <%= event.start_at.strftime("%B %d, %I:%M %p")%> PDT: http://www.thinq.tv/<%= user.permalink %>%20Every%20afternoon%20and%20evening%20ThinQ.tv%20has%20meaningful%20live%20video%20chat%20conversations%20to%20get%20you%20motivated%20for%20the%202020%20elections.%20Go%20to%20http://ThinQ.tv%20and%20browse%20the%20schedule%20of%20Conversations."
                 onclick="window.open('https://twitter.com/intent/tweet?text=Join <%= user.name %> Conversation: <%= event.name + "," %> <%= event.start_at.strftime("%B %d, %I:%M %p")%> PDT: http://www.thinq.tv/<%= user.permalink %>,
                 'newwindow',
-                'width=600,height=400,top=80,left=300');
+                'width=600,height=400,top=100,left=300');
                 return false;">
                 <%= image_tag("social-share-button/twitter.png", style:"height:31px")%>
               </a>&nbsp
