realigning countdown home buttons

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -44,7 +44,7 @@
       <h2 class="text-center"><strong>Conversations</strong>
       </h2>
       <hr class="black-divider" style="width: 35%; border-width: 3.5px; border-color: black;">
-      <p class = "text-center">Join video chats where experienced women who are hiring empower the next generation of STEM professionals. <br>Ask for advice and find out how to get your first tech job!
+      <p class = "text-center" style="width: 80%; margin: auto">Join video chats where experienced women who are hiring empower the next generation of STEM professionals. <br>Ask for advice and find out how to get your first tech job!
       </p>
       <div class="col-lg-12 col-md-12 mx-auto d-block text-center" style = "min-height:42%; justify-content:flex-end">
         <%= render 'layouts/countdown_clock' %>
@@ -59,7 +59,7 @@
       <h2 class="text-center" style="margin-top: 4px"><strong>Drop-In Hours</strong>
       </h2>
       <hr class="black-divider" style="width: 35%; border-width: 3.5px; border-color: black;">
-      <p class = "text-center">
+      <p class = "text-center" style="width: 80%; margin: auto">
         Join a community of student developers and designers to network and get peer feedback. <br> Please drop in and interrupt us to find out what we're up to!
       </p>
       <div class="col-lg-12 col-md-12 col-sm-7 mx-auto d-block text-center" style = "min-height:42%; justify-content:flex-end">
